[package]
name = "streaming_quotes"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = {version = "=1.1.3", features = ["use-std"]}
serde = {version = "=1.0.228", features = ["derive"]}
rand = "=0.9.2"
rand_distr = "=0.5.1"
serde_json = "=1.0.149"
flexi_logger = "=0.31.8"
anyhow = "=1.0.100"
log = "=0.4.29"
clap = {version = "=4.5.54", features = ["derive"]}

[dev-dependencies]
tempfile = "=3.24.0"